Because TR's cannot be brought to the front, they end up behind the drop-target when dragged, so we need to to ensure our drop target has a transparent background otherwise we cannot see the dragged item... Would be nice to find a solution to this so that the dragged item is at the top of the stack, but I think that would require moving every TR in the DOM from after the dragged item, to before it which is almost certainly not practical...

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -187,23 +187,21 @@
   color: pink;
 }
 
-.drop-target, .drop-target td
+.drop-target
 {
     border : 2px dashed yellow !important;
     background-color: #FFFFDD !important;
 }
 
+tr.drop-target, tr.drop-target td
+{
+    border : 2px dashed yellow !important;
+    background : none !important;
+}
+
 li.drop-target
 {
   display : inline-block;
-}
-
-.drag-me
-{
-    border : 2px dotted blue !important;
-    background-color: #FFFFDD !important; 
-    width : 100%;
-    height : 75px;
 }
 
 .dragging-over .sortable-item
